// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected undefined but received string."
`;

exports[`reducer() APPROVALS-PC/UI/ATT-DAILY-FIX/SELECTED_ID/CLEAR 1`] = `
"Snapshot Diff:
- First value
+ Second value

- 0001
+ "
`;

exports[`reducer() APPROVALS-PC/UI/ATT-DAILY-FIX/SELECTED_ID/SET 1`] = `
"Snapshot Diff:
- First value
+ Second value

- 
+ 0001"
`;
